# hms-backend/api/controllers/assignment.js
@@ -56,9 +56,10 @@ export default class assignmentController {
 
             // Check if the user is a lecturer
             const user = await User.findById(createdBy);
-            if (!user || user.role !== 'lecturer') {
+            if (user.role !== 1) {
                 return res.status(403).json({ error: 'Access denied. Only a lecturer can create assignments.' });
             }
+
 
             // Create and save the assignment
             const newAssignment = new Assignment({ title, description, dueDate, subject, createdBy });
